--- a/components/image-grid.html
+++ b/components/image-grid.html
@@ -35,28 +35,28 @@
   <a href="indoctrination.html">
       <img src="images/5 INDOCTRINATION LOGO SMALL.webp" alt="Design 8" loading="lazy">
   </a>
-  <a href="propaganda.html">
+  <a href="propaganda-missile.html">
       <img src="images/6 PROPAGANDA SMALL.webp" alt="Design 9" loading="lazy">
   </a>
-  <a href="propaganda.html">
+  <a href="propaganda-missile.html">
       <img src="images/6.1 PROPAGANDA LOGO SMALL.webp" alt="Design 10" loading="lazy">
   </a>
-  <a href="collection-4biddenprod-nada.html">
+  <a href="design-4biddenprod-nada.html">
       <img src="images/4BIDDENPROD NADA SMALL.webp" alt="Design 11" loading="lazy">
   </a>
-  <a href="collection-4biddenprod-nada.html">
+  <a href="design-4biddenprod-nada.html">
       <img src="images/4BIDDENPROD NADA LOGO SMALL.webp" alt="Design 12" loading="lazy">
   </a>
-  <a href="support-the-current.html">
+  <a href="support-current-thing.html">
       <img src="images/8 I SUPPORT SMALL.webp" alt="Design 13" loading="lazy">
   </a>
-  <a href="support-the-current.html">
+  <a href="support-current-thing.html">
       <img src="images/8.1 I SUPPORT PLUS SMALL.webp" alt="Design 14" loading="lazy">
   </a>
-  <a href="iq-test.html">
+  <a href="bluebeam-iq-test.html">
       <img src="images/9 IQ TEST SMALL.webp" alt="Design 15" loading="lazy">
   </a>
-  <a href="iq-test.html">
+  <a href="bluebeam-iq-test.html">
       <img src="images/9.1 IQ TEST LOGO SMALL.webp" alt="Design 16" loading="lazy">
   </a>
   <a href="you-are-here.html">
@@ -68,16 +68,16 @@
   <a href="they-lie-vision.html">
       <img src="images/11 THEY-LIE-VISION SMALL.webp" alt="Design 19" loading="lazy">
   </a>
-  <a href="tlnn.html">
+  <a href="they-lie-news-network.html">
       <img src="images/14 TLNN SMALL.webp" alt="Design 20" loading="lazy">
   </a>
-  <a href="tlnn.html">
+  <a href="they-lie-news-network.html">
       <img src="images/4biddenprod white SMALL.webp" alt="Design 21" loading="lazy">
   </a>
-  <a href="tlnn2.html">
+  <a href="they-lie-news2.html">
       <img src="images/12 TLNN 2.0 SMALL.webp" alt="Design 22" loading="lazy">
   </a>
-  <a href="tlnn2.html">
+  <a href="they-lie-news2.html">
       <img src="images/4biddenprod logo black SMALL SMALL.webp" alt="Design 23" loading="lazy">
   </a>
   <a href="all-designs.html">
