--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -2489,6 +2489,21 @@ input[type="radio"] + label:before {
       text-align: center;
   }
 }
+.right-text {
+  width: 50%;
+  padding-left: 20px;
+}
+
+.right-text h3 {
+  margin-bottom: 10px;
+  font-size: 2em;
+  max-width: 90%;
+}
+
+.right-text p {
+  font-size: 16px;
+  line-height: 1.5;
+}
 
 
 
