before duplication slide

--- a/components/image-grid.html
+++ b/components/image-grid.html
@@ -1,7 +1,7 @@
 <div class="container">
     <!-- Left Side: Title and Button -->
     <div class="button-container">
-      <h1 class="discover-title">Discover All Our Designs and Collections</h1>
+      <h1 class="discover-title">Discover All Our Designs and Collections by 4biddenClothes</h1>
       <a href="all-designs.html" class="view-all-button">
         View All Designs
       </a>
