--- a/components/image-grid.html
+++ b/components/image-grid.html
@@ -2,7 +2,7 @@
     <!-- Left Side: Title and Button -->
     <div class="button-container">
       <h1 class="discover-title">Discover All Our Designs and Collections by 4biddenClothes</h1>
-      <a href="all-designs.html" class="view-all-button">
+      <a href="https://4biddenprod.com/all-designs.html" class="view-all-button">
         View All Designs
       </a>
     </div>
