--- a/components/image-grid.html
+++ b/components/image-grid.html
@@ -11,7 +11,7 @@
 
     <!-- Right Side: Image Grid -->
     <div class="grid-container">
-  <a href="forg3t.html">
+  <a href="https://4biddenprod.com/forg3t.html">
       <img src="images/1 FORG3T SMALL.webp" alt="Design 1" loading="lazy">
   </a>
   <a href="forg3t.html">
