--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -3745,6 +3745,7 @@ body {
 /* divider */
 #slideshow-container-2 {
   margin-bottom: 40px;
+  
 }
 
 /* Wrapper and container styles */
@@ -3920,7 +3921,7 @@ body {
 }
 .divider {
   height: 20px; /* Thickness of the divider */
-  background-color: #000000; /* Color of the divider */
+  background-color: #ffffff; /* Color of the divider */
   width: 100%; /* Width of the divider */
   margin: 1em 0; /* Space above and below the divider */
 }
