--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -3921,7 +3921,7 @@ body {
 }
 .divider {
   height: 20px; /* Thickness of the divider */
-  background-color: #ffffff; /* Color of the divider */
+  background-color: #000000; /* Color of the divider */
   width: 100%; /* Width of the divider */
   margin: 1em 0; /* Space above and below the divider */
 }
