--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -3927,6 +3927,14 @@ body {
 }
 
 
+.divider-1 {
+  height: 20px; /* Thickness of the divider */
+  background-color: #ffffff; /* Color of the divider */
+  width: 100%; /* Width of the divider */
+  margin: 1em 0; /* Space above and below the divider */
+}
+
+
 /* Reset default margin, padding, and box-sizing */
 * {
   margin: 0;
