--- a/components/slider-one.html
+++ b/components/slider-one.html
@@ -18,7 +18,7 @@
 
           <!-- Slide 1 -->
           <div class="cslider-slide">
-            <a href="new-arrivals.html">
+            <a href="his-story.html">
               <img src="images/s1.webp" alt="New Arrivals Collection">
               <div class="cslider-hover-text" aria-hidden="true">
                 <span class="cslider-view">VIEW</span>
