--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -2744,7 +2744,7 @@ button:disabled,
 .harmonized-container {
   max-width: 1200px;
   margin: 0 auto;
-  background-color: #000000;
+  background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
