--- a/components/slider-one.html
+++ b/components/slider-one.html
@@ -40,7 +40,7 @@
 
           <!-- Slide 3 -->
           <div class="cslider-slide">
-            <a href="grounding.html">
+            <a href="quiz.html">
               <img src="images/s7.webp" alt="Grounding & Earthing Essentials Collection">
               <div class="cslider-hover-text" aria-hidden="true">
                 <span class="cslider-view">VIEW</span>
